--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/Landing_page_styles.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
 	<title>My London Journey</title>
 </head>
 <body>
@@ -25,21 +26,21 @@
                     <a href="about.html" class="nav-link">About Me </a>
                 </li>
                 <li>
-                    <a href="#">Pictures </a>
+                    <a href="pictures.html">Pictures </a>
                 </li>
                 <li>
-                    <a href="#">Refections </a>
+                    <a href="reflections.html">Reflections </a>
                 </li>
                 <li>
-                    <a href="#">Contact me </a>
+                    <a href="contact.html">Contact me </a>
                 </li>
+            </ul>
         </div>
     </nav>
-    <h1>Hey all, welcome to my London journey! </h1>
     <div class="container"> 
         <div class="row"> 
             <div class="col-md-12">
-              <H1 class="animated bounce infinite"> Life in London 2016 </H1>
+              <H1 class="animated shake-it infinite"> Life in London 2016 </H1>
             </div>
         </div>
      
@@ -55,7 +56,7 @@
             </div>
         </div>
 
-        <div class="row"> 
+        <div class="animated shake-it row"> 
             <div class="col-md-4">
               <h2>@LUISAONG </h2>
                 <p> Studying at London School of Economics
@@ -111,9 +112,11 @@
                 </p>    
             </div>
         </div>
+       <div class="row"> 
         <div class="stitched">
-            Welcome, Enter!
-        </div>
+             <a href="https://www.instagram.com/lulucool/" class="stitched">Welcome, Enter! </a>
+            </div>
+        </div>    
         <div id="ballMenuContainer">
             <div id="menuBall1" class="menuBall">
                 <a href="#" class="ball blueball">
